[gd_scene load_steps=4 format=3 uid="uid://byn8m7sodymwu"]

[ext_resource type="Script" path="res://rabbit/rabbit.gd" id="1_1b5jy"]
[ext_resource type="Texture2D" uid="uid://nomgbcxffi5d" path="res://rabbit/rabbit.png" id="2_kvk2u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dy1mr"]
size = Vector2(100, 100)

[node name="Rabbit" type="CharacterBody2D"]
z_index = 6
z_as_relative = false
collision_layer = 2
collision_mask = 2
script = ExtResource("1_1b5jy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kvk2u")

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_dy1mr")
target_position = Vector2(0, 0)
collision_mask = 3

[node name="EscapeTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(7, -44, 21, -32, 27, -31, 32, -48, 39, -44, 41, -23, 40, -4, 32, 6, 25, 21, 32, 27, 29, 43, -32, 43, -42, 0, -49, -6, -45, -23, -35, -20, -15, -28, 4, -18)

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="EscapeTimer" to="." method="_on_escape_timer_timeout"]
